--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
-pandas
-numpy
-matplotlib
-seaborn
-scikit-learn
+gensim==4.3.3
+ipykernel==6.29.5
+matplotlib==3.10.0
+matplotlib-inline==0.1.7
+nltk==3.9.1
+numpy==1.26.4
+pandas==2.2.3
+scikit-learn==1.6.1
+scipy==1.13.1
+seaborn==0.13.2
+spacy==3.8.4
+tqdm==4.67.1
+wordcloud==1.9.4
